objects/JBCXM__GSFileLink__c.object
<CustomObject>
    <description>This object stores links to files related Gainsight modules</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GS File Link</relationshipLabel>
        <relationshipName>GSFileLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call To Action</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipLabel>File Link</relationshipLabel>
        <relationshipName>FileLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DocumentID__c</fullName>
        <label>ContentDocument ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__URL__c</fullName>
        <description>URL for the file</description>
        <formula>HYPERLINK( &quot;/&quot; &amp; JBCXM__DocumentID__c ,JBCXM__FileName__c)</formula>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>GSFileLink</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSFileLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>